Resolve low contrast warning in Lighthouse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   --bg-color:#fff;
   --secondary-bg-color:#eeeeee;
   --heading-color: #5f5f5f;
-  --body-color: rgba(0, 0, 0, 0.5);
+  --body-color: rgba(0, 0, 0, 0.7);
   --post-color: rgba(0, 0, 0, 0.44);
   --border-color: rgba(0, 0, 0, 0.15);
   --pre-bg-color: #f9f9fd;
@@ -91,7 +91,7 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
-  color: #4786D6;
+  color: #2660ab;
 }
 
 /*basic styles ends*/
@@ -200,7 +200,7 @@ a:hover, a:active {
   color: var(--nav-text-color);
 }
 .page-top .nav a:hover {
-  color: #4786D6;
+  color: #2660ab;
 }
 .page-top .nav a.current {
   color: var(--nav-text-color);
@@ -295,7 +295,7 @@ a:hover, a:active {
   color: var(--heading-color);
 }
 .sidebar .social-links a:hover {
-  color: #4786D6;
+  color: #2660ab;
 }
 
 .post {
@@ -337,7 +337,7 @@ a:hover, a:active {
 .post .post-content a {
   text-decoration: none;
   letter-spacing: 1px;
-  color: #4786D6;
+  color: #2660ab;
 }
 .post .post-content a:hover {
   color: #2F69B3;
@@ -384,7 +384,7 @@ a:hover, a:active {
   padding-right: 10px;
 }
 .post .post-footer .meta a:hover {
-  color: #4786D6;
+  color: #2660ab;
 }
 .post .post-footer .meta i {
   margin-right: 6px;
@@ -480,7 +480,7 @@ a:hover, a:active {
   color: #A6A6A6;
 }
 .footer a:hover {
-  color: #4786D6;
+  color: #2660ab;
 }
 
 /*for archive*/
@@ -517,7 +517,7 @@ a:hover, a:active {
   color: #8F8F8F;
 }
 .list-with-title .listing .listing-post a:hover {
-  color: #4786D6;
+  color: #2660ab;
 }
 
 /* share */
